--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-izitoast": "^1.2.1",
     "vue-loading-overlay": "^3.3.2",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
